samples/_failures_safe/1761522574_e599bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa76e29e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_aa76e29e.c:165:31: error: expected ‘;’ at end of input
  165 |                 token.value[1]
      |                               ^
      |                               ;
./samples/SAFE/__tmp_aa76e29e.c:165:17: error: expected declaration or statement at end of input
  165 |                 token.value[1]
      |                 ^~~~~
./samples/SAFE/__tmp_aa76e29e.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa76e29e.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa76e29e.c:165:17: error: expected declaration or statement at end of input
